--- a/nfs-storage-class/step-04-nfs-pvc.yaml
+++ b/nfs-storage-class/step-04-nfs-pvc.yaml
@@ -4,8 +4,8 @@ metadata:
   name: nfs-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadOnlyMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 1Gi
   storageClassName: nfs-storage
